# MinivLLM-xpu

./: README.md  README_zh.md  benchmark_decoding.py  benchmark_prefilling.py  benchmark_tps.py  interview_qa_record.md  main.py  main_llama32.py  print_model.py  pyproject.toml  setup.py
src/myvllm/engine/: llm_engine.py  model_runner.py
src/myvllm/layers/: activation.py  attention.py  embedding_head.py  linear.py  sampler.py
src/myvllm/models/: llama.py  qwen3.py
src/myvllm/utils/: __init__.py  context.py  device.py
tests/: test_attention_xpu.py
