[project]
name = "myvllm"
version = "0.1.0"
description = "A custom vLLM project"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "transformers",
    "xxhash",
    "torch==2.11.0+xpu",
    "torchvision==0.26.0+xpu",
    "torchaudio==2.11.0+xpu",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-xpu"},
]
torchvision = [
    { index = "pytorch-xpu" },
]
torchaudio = [
    { index = "pytorch-xpu" },
]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.0",
]
